hahahaha blaze it (this was actually needed, it fixes a linewrap issue)

--- a/map/src/index.css
+++ b/map/src/index.css
@@ -44,7 +44,7 @@ main {
 }
 
 .controls {
-  width: 380px;
+  width: 420px;
   height: 100%;
   float: right;
   overflow-x: hidden;
